<resources>
  <string name="app_name">Eeppy</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string-array name="gender">
    <item>Male</item>
    <item>Female</item>
  </string-array>

  <!--  ['Software Engineer = 0', 'Doctor = 1', 'Sales Representative = 2', 'Teacher = 3', 'Nurse = 4', 'Engineer = 5', 'Accountant = 6', 'Scientist = 7', 'Lawyer = 8', 'Salesperson = 9', 'Manager = 10']-->
  <string-array name="occupation">
    <item>Software Engineer</item>
    <item>Doctor</item>
    <item>Sales Representative</item>
    <item>Teacher</item>
    <item>Nurse</item>
    <item>Engineer</item>
    <item>Accountant</item>
    <item>Scientist</item>
    <item>Lawyer</item>
    <item>Salesperson</item>
    <item>Manager</item>
  </string-array>

  <string-array name="bmi">
    <item>Overweight</item>
    <item>Normal</item>
  </string-array>

  <string name="dataset_desc">The "Sleep Health and Lifestyle Dataset" on Kaggle appears to be a valuable resource for exploring the relationship between sleep patterns and various lifestyle factors. Here\'s a description based on the information available on the Kaggle page: Content: The dataset contains information about individuals\' sleep habits and lifestyle choices</string>
  <string name="dataset_desc_2">Think of this dataset like peeking into people\'s sleep diaries. It\'s got all the juicy details about how they live and how they sleep! We see what jobs they have, how much they move around, how stressed they get, even stuff like their weight and heart rate. It\'s like putting together a puzzle to figure out how all these everyday things affect their sleep – the good, the bad, and the downright sleepy!</string>
  <string name="link_dataset">The dataset above only provides the first 10 line, you can access the full dataset through this link : \n \n kaggle.com/datasets/uom190346a/sleep-health-and-lifestyle-dataset</string>

  <string name="model_architecture_image">Model Architecture Diagram</string>
  <string name="model_architecture_title">Model Architecture</string>
  <string name="model_architecture_explanation">
    This model is a sequential neural network designed to predict sleep disorders based on various lifestyle factors. It consists of multiple dense layers with ReLU activation and dropout for regularization.
    The input layer takes in a vector of features, and the output layer produces probabilities for the three sleep disorder classes.
    \n\n
    Through careful training and optimization, this model has achieved an impressive **90% accuracy** on a held-out test dataset, demonstrating its strong ability to identify sleep disorders based on the provided features.
    \n\n
    **Layers:**
    \n
    * Dense(16, activation=\'relu\')
    \n
    * Dropout(0.5)
    \n
    * Dense(32, activation=\'relu\')
    \n* Dropout(0.5)
    \n
    * Dense(16, activation=\'relu\')
    \n
    * Dropout(0.5)
    \n
    * Dense(3, activation=\'softmax\')
</string>
  <string name="app_description">
        This app is designed for educational purposes to demonstrate the use of Artificial Neural Networks (ANN) in predicting sleep disorders, particularly insomnia.
        \n\n
        To take the test and see if you might be at risk, simply press the floating button at the bottom right of the screen!
    </string>

  <string name="compiler_title">Compiler</string>
  <string name="compiler_explanation">
        The model is compiled with the following settings:
        \n\n
        * **Loss Function:** sparse_categorical_crossentropy (suitable for multi-class classification with integer labels)
        \n
        * **Optimizer:** adam (a popular adaptive optimization algorithm)
        \n
        * **Metrics:** accuracy (measures the percentage of correct predictions)
    </string>
</resources>