<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp">
          </TableLayout>

        </HorizontalScrollView>

        <com.google.android.material.divider.MaterialDivider
          android:id="@+id/horizontalLineTable"
          android:layout_width="match_parent"
          android:layout_height="1dp" />


        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:text="@string/dataset_desc"
          android:justificationMode="inter_word"
          />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_margin="16dp"
          android:text="@string/dataset_desc_2"
          android:justificationMode="inter_word"
          />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_margin="16dp"
          android:text="@string/link_dataset"
          android:justificationMode="inter_word"
          android:clickable="true"
          android:autoLink="web"
          />
      </LinearLayout>

    </ScrollView>

  </LinearLayout>

</FrameLayout>